WithoutPOC/CVE-2026-24512/manifests/web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
  namespace: lab
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
        - name: web
          image: nginx:1.25-alpine
          ports:
            - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: lab
spec:
  selector:
    app: web
  ports:
    - port: 80
      targetPort: 80
